# msps

./: LICENSE  README.md  pyproject.toml  renovate.json  sonar-project.properties  tox.ini
.docker/: Dockerfile.tests
.github/: CODEOWNERS
.github/workflows/: merge-main-back-to-develop.yaml  release-prod.yaml  release-test.yaml  tests.yaml
.scripts/: start-release.sh  test.sh
.trunk/: trunk.yaml
src/msps/: __main__.py  cli.py  config.py  core.py  maven.py  model.py  ui.py
tests/: manual_test_ui.py  test_maven.py  test_ui.py
